# lyrebird

./: .gitignore  Cargo.toml  LICENSE  README.md  README_template.md
.cargo/: config.toml
.github/workflows/: publish.yml
assets/dialogue/: hello.yarn
assets/soundfonts/: soundfonts.ron
examples/helpers/: resources.rs
examples/instrument-test/: main.rs  systems.rs
examples/midi-debug/: main.rs  systems.rs
examples/sequence/: main.rs  resources.rs  systems.rs
src/: components.rs  lib.rs  resources.rs  systems.rs
src/dialogue/: events.rs  mod.rs  systems.rs
src/dialogue_view/: mod.rs
src/dialogue_view/asset/: systems.rs
src/dialogue_view/options_selection/: events.rs  mod.rs  resource.rs  systems.rs
src/dialogue_view/setup/: components.rs  mod.rs  style.rs  systems.rs
src/dialogue_view/typewriter/: events.rs  mod.rs  resources.rs  systems.rs
src/dialogue_view/updating/: events.rs  mod.rs  systems.rs
src/dialogue_view/widgets/: mod.rs
src/midi_input/: components.rs  mod.rs  systems.rs
src/midi_keys/: components.rs  mod.rs  resources.rs  systems.rs
src/music/: events.rs  mod.rs  resources.rs  systems.rs
src/music/instruments/: resources.rs
src/sequencer/: mod.rs  resources.rs  systems.rs
src/sfx/: components.rs  mod.rs  resources.rs  systems.rs
src/soundfont/: events.rs  mod.rs  resources.rs  systems.rs
src/synth/: components.rs  events.rs  mod.rs  resources.rs  systems.rs
src/synth/glicol_engine/: mod.rs
