[package]
name = "lyrebird"
version = "0.1.8"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "a crate for sound and music generation in bevy"
authors = ["Ky 'geksupport' Winston <Ky Winston kywinston@proton.me>"]
exclude = ["examples/*", "**/bin", "*_template"]
publish = true

[dependencies]
bevy = { version = "0.14.2", default-features = false, features = [
    "bevy_asset",
    "png",
] }
bevy_kira_audio = "0.20.0"
bevy_midi = { version = "0.9.0", optional = true }
uuid = "1.10.0"
# glicol_synth = "0.13.5"
fundsp = "0.20.0"
leafwing_manifest = { version = "0.2.0", features = ["ron"] }

[features]
default = []
debug = ["dep:bevy_midi"]

[dev-dependencies]
bevy = { version = "0.14.2", default-features = false, features = [
    "png",
    "bevy_ui",
    "tonemapping_luts",
] }
serde = "1.0.210"
cargo-husky = { version = "1", features = [
    "precommit-hook",
    "run-cargo-test",
    "run-cargo-clippy",
] }

[target.'cfg(target_os = "linux")'.dev-dependencies.bevy]
features = ["x11", "wayland", "bevy_winit"]
version = "0.14.2"
default-features = false

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3


[[example]]
name = "midi-debug"
path = "examples/midi-debug/main.rs"
features = ["debug"]
doc-scrape-examples = true

[[example]]
name = "sequence"
path = "examples/sequence/main.rs"
features = []
doc-scrape-examples = true
