[package]
name = "lyrebird"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "a crate for sound and music generation in bevy"
authors = ["Ky 'geksupport' Winston <Ky Winston kywinston@proton.me>"]
exclude = ["examples/*", "**/bin", "*_template"]
publish = true

[dependencies]
bevy = { version = "0.15.0", default-features = false, features = [
    "bevy_asset",
    "png",
] }

anyhow = "1.0.82"
bevy_midi = { version = "0.9.0", optional = true }
uuid = "1.10.0"
cpal = { version = "0.15.3" }
glicol = { version = "0.13.5", features = ["use-samples"] }
glicol_synth = "0.13.5"
parking_lot = "0.12.2"
bevy_egui = { version = "0.28.0", optional = true }
cfg-if = "1.0.0"

[features]
default = []
debug = ["bevy_egui"]
midi = ["bevy_midi"]

[dev-dependencies]
bevy = { version = "0.15.0", default-features = false, features = [
    "png",
    "bevy_asset",
    "bevy_ui",
    "tonemapping_luts",
] }
leafwing_manifest = { version = "0.2", features = ["ron"] }
serde = "1.0.210"
cargo-husky = { version = "1", features = [
    "precommit-hook",
    "run-cargo-test",
    "run-cargo-clippy",
] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.92"
web-sys = "0.3.69"


[target.'cfg(target_os = "linux")'.dependencies.bevy]
features = ["x11", "wayland","bevy_winit"]
version = "0.15.0"
default-features = false

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1
        
# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
debug = 0
strip = true
lto = "thin"


[[example]]
name = "midi-debug"
path = "examples/midi-debug/main.rs"
features = ["debug"]
doc-scrape-examples = true

[[example]]
name = "instrument-test"
path = "examples/instrument-test/main.rs"
features = ["debug"]
doc-scrape-examples = true
